/*
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";

message GeoLocation {
  double lat = 1;
  double lng = 2;
}

enum SpatialType {
  NO_LOCATION = 0;
  FIXED_LOCATION = 1;
  MOBILE_NODE = 2;
}

message WorkerLocationInfo {
  uint64 id = 1;
  GeoLocation geoLocation = 2;
}

message ReconnectSchedule {
  uint64 parentId = 1;
  GeoLocation pathStart = 2;
  GeoLocation pathEnd = 3;
  GeoLocation lastIndexUpdatePosition = 4;
  repeated SerializableReconnectPoint reconnectPoints = 5;
}

message SerializableReconnectPrediction {
  uint64 id = 1;
  uint64 time = 2;
}

message SerializableReconnectPoint {
  GeoLocation geoLocation = 1;
  SerializableReconnectPrediction reconnectPrediction = 2;
}
